# school_projects

BD/: package-lock.json  package.json
BD/backend/: index.js  package-lock.json  package.json
BD/backend/SQL/: create_tables.sql  create_views.sql  insert_status.sql  insert_user.sql
BD/backend/api/: constants.js  dbQuery.js  sql_queries.js  utils.js
BD/src/: App.js
BD/src/api/: api.js
BD/src/constants/: routes.js
BD/src/containers/: Nav.js  NewData.js  Stats.js  Status.js  User.js
IPP/: avl.c  avl.h  main  main.c  makefile
IPP/forests/: README.md  avl.c  avl.h  main.c  makefile  test.sh
IPP/forests/tests/: example1.in  example1.out  example2.in  test.in  test.out
IPP/gamma/: CMakeLists.txt  MainPage.dox  test.sh
IPP/gamma/src/: gamma.c  gamma_main.c  gamma_test.c  utils.c  utils.h
IPP/gamma/tests/: README  big-numbers.err  big-numbers.in  broken.input  (+30 more)
JNP/imperial_battle/: battle.h  helper.h  imperialfleet.h  rebelfleet.h
PW/petrinet/: PetriNet.java  README.md  Transition.java
PW/shamans/: README.md
PW/shamans/src/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bottomlessBagTest.cpp  cmake_install.cmake  crystalSelectionTest.cpp
PW/thread_pool/: README.md  future.c  future.h  matrix.c  threadpool.c  threadpool.h
SK/TCP/: Makefile  nk-client-tcp  nk-client-tcp.c  nk-server-tcp  nk-server-tcp.c
SK/TESTHTTP/: makefile  testhttp_raw.c
SK/radio_proxy/: .gitignore  err.c  makefile  radio-proxy.c  utils.c  utils.h
SO/DCL/: dcl.asm  debug.sh  makefile  res.out  test.sh
SO/PIX/: makefile  pix.asm  pix.c  pix.h  pix.test  test.sh
(+3 files in other folders)
